welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:40: error: ';' expected but 'else' found.
									else
                                                                        ^